--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#HOME">Home</a></li>
         <li><a href="#Services">Services</a></li>
         <li><a href="#About">About</a></li>
-        <li><a href="contactus.html">Contact</a></li>
+        <li><a href="contactus.html" target="_blank">Contact</a></li>
       </div>
     </nav>
     <div class="intro"  >
@@ -30,12 +30,12 @@
           </div>
         <div class="heads" id="dscrp"><h3>
           "Welcome to MOROCCO INVEST! We're here to guide you through Morocco's investment scene<br>Our beta web app is designed for global investors and locals alike.<br> We offer detailed insights to help you make informed decisions and explore Morocco's diverse investment opportunities, no matter where you are in the world."</h3></div>
-        <div class="heads"> <a href="c"><button class="try">Try Beta Version      <i class="fa-solid fa-microchip"></i></button></a> </div>
+        <div class="heads"> <a href="./indexapp.html" target="_blank"><button class="try">Try Beta Version      <i class="fa-solid fa-microchip"></i></button></a> </div>
     </div>
     </div>
     <div class="parent-container" id="Services">
        <div class="text1" ><h1>- AT MOROCCO INVEST  :</h1><p> we leverage cutting-edge algorithms and extensive resources to guide and empower you in exploring the diverse investment landscape of Morocco.<br> Our platform is meticulously designed to provide precise insights, ensuring that whether you're a local or a global investor, you're equipped with the knowledge and guidance needed to navigate Morocco's investment opportunities.<br> We're dedicated to being your trusted partner, leading you towards strategic and rewarding investment paths within the vibrant Moroccan market.</p></div><br>
-       <h1 style="text-align: center; text-decoration:underline;"> - WHY MOROCCO ? </h1>
+       <h1 style="text-align: center; text-decoration:wavy; font-family: monospace;">  - WHY MOROCCO ? </h1>
 
       <div class="companies">
         <iframe width="1000" height="500" src="https://www.youtube.com/embed/J7ycK9JH5Lo?si=SN7HEW1hjnsZZ8yu&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
