--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     </div>
     <div class="parent-container" id="Services">
-       <div class="text1" ><h1>- AT MOROCCO INVEST  :</h1><p> we leverage cutting-edge algorithms and extensive resources to guide and empower you in exploring the diverse investment landscape of Morocco.<br> Our platform is meticulously designed to provide precise insights, ensuring that whether you're a local or a global investor, you're equipped with the knowledge and guidance needed to navigate Morocco's investment opportunities.<br> We're dedicated to being your trusted partner, leading you towards strategic and rewarding investment paths within the vibrant Moroccan market.</p></div><br>
+       <div class="text1" ><h1>AT MOROCCO INVEST  </h1><p> we leverage cutting-edge algorithms and extensive resources to guide and empower you in exploring the diverse investment landscape of Morocco.<br> Our platform is meticulously designed to provide precise insights, ensuring that whether you're a local or a global investor, you're equipped with the knowledge and guidance needed to navigate Morocco's investment opportunities.<br> We're dedicated to being your trusted partner, leading you towards strategic and rewarding investment paths within the vibrant Moroccan market.</p></div><br>
        <h1 style="text-align: center; text-decoration:wavy; font-family: monospace;">  - WHY MOROCCO ? </h1>
 
       <div class="companies">
